# childsafe-assistant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: api.py  cli.py  langchain_rag.py  rag.py  web_search.py
deploy/: fabfile.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Chat.jsx
